@@ -2,12 +2,13 @@
 Hash: SHA1
 
 EBUILD ffmpeg-0.6-r1.ebuild 657 RMD160 b887bbd1559fd9b5f206bc809f02fc3a5729d39c SHA1 fc05f93f89f70db2026ef14c6e19aa433967d970 SHA256 0fd3253d5c121a494274729e36f819355c0cdc731b8a23f41c61cfaa97e77a37
-MISC ChangeLog 2072 RMD160 114eb6babb72c7f5a84374248e7cf7a9c13b255b SHA1 b9cfdd5f16cdf18d73315853e2f8440679570dcf SHA256 b9ad81dc1ca106f1e955e63adfe4affc5163366c349ccaacdd08e38a902a22ac
+EBUILD ffmpeg-0.6.90.ebuild 676 RMD160 93763818ec2263632cb05984be22f88ae537f7c4 SHA1 7446476f8eed4f194201277cb817735220034d09 SHA256 61044193551402a362bc42ca3372636fe010e347c5f8b222f6460d188ca6ca7e
+MISC ChangeLog 2290 RMD160 09f54c787217f200603c3896e095a2e3659eea4b SHA1 e34f002c74cf383e140d5add998cfb1820484690 SHA256 0227f953496e9b02bcaadeac0e026a475b51e6b3af33d0d633209800582d9171
 MISC metadata.xml 444 RMD160 fc60036f4c1ac0da29830090aa021ccc2e9cbe98 SHA1 82f158dc39f1300bf473282a3ce916534f0e44f1 SHA256 cef0fff52fc751969934693172e0c5f23fea1bddb44b0dc0ed68cb7bc00d1770
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2YTekACgkQHB6c3gNBRYcrhwCfWQhBz4eU5swMzBclrJYSx8YN
-41wAn3rm1HuNV8k0z2gHLmMRRREtt+4V
-=m3qP
+iEYEARECAAYFAk2bNqsACgkQvFcC4BYPU0r+ugCghxFnXeo324ZmTsj1lonmlaW2
+BvkAnRQayMujjHTXvd9N6vH+ha9X4kQT
+=2oe9
 -----END PGP SIGNATURE-----
