@@ -1,0 +1,22 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ffmpeg/Attic/ffmpeg-0.6.90.ebuild,v 1.1 2011/04/05 15:35:00 aballier Exp $
+
+EAPI=4
+
+DESCRIPTION="Virtual package for FFmpeg implementation"
+HOMEPAGE=""
+SRC_URI=""
+
+LICENSE=""
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="X +encode mp3 sdl theora threads vaapi vdpau x264"
+
+RDEPEND="
+	|| (
+		>=media-video/ffmpeg-0.6.90_rc[X=,encode=,mp3=,sdl=,theora=,threads=,vaapi=,vdpau=,x264=]
+		>=media-video/libav-0.6.90_rc[X=,encode=,mp3=,sdl=,theora=,threads=,vaapi=,vdpau=,x264=]
+	)
+"
+DEPEND=""
