@@ -1,6 +1,12 @@
 # ChangeLog for virtual/ffmpeg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.8 2011/04/03 10:37:23 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.9 2011/04/05 15:35:00 aballier Exp $
+
+*ffmpeg-0.6.90 (05 Apr 2011)
+
+  05 Apr 2011; Alexis Ballier <aballier@gentoo.org> +ffmpeg-0.6.90.ebuild:
+  add a virtual for the upcoming 0.6.90 release so that packages needing more
+  recent features can depend on it
 
 *ffmpeg-0.6-r1 (03 Apr 2011)
 
